--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 "sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
 		crossorigin="anonymous">
 
-	<!-- Linking Your CSS File -->
+	<!-- Linking CSS File -->
 	<link rel="stylesheet" href="style.css"/>
 
 	<!-- Loading Roboto Font from Google Fonts -->
@@ -35,54 +35,40 @@
 <body id="body">
 	<div>
 
-	<!-- Quote Box -->
+	<!-- question Box -->
 	<div class="block text-center">
 
-	<!-- Front part of the Quote Box -->
+	<!-- Front part of the question Box -->
 	<div class = "quote-box block__main block__front">
 
-	<!-- Quote to be Displayed Here -->
-	<span class = "quote">
-		
-		<!-- Hyphen is Displayed -->
-		<i class="fas fa-2x"></i>
-
-		<!-- Quote Text -->
+	<!-- question to be Displayed Here -->
+	<span class = "questions">
+		<!-- question Text -->
 		<span class = "text">
-		Quote To be Displayed Here
+		Questions To be Displayed Here
 		</span>
 
 	</span>
 		
-	<!-- Author to be Displayed Here -->
-	<div class = "author">
-	</div>
-	<a class = "new-quote btn btn-default"
-		onclick="newQuote()">New Card</a>
+	<a class = "new-question btn btn-default"
+		onclick="newQuestion()">New Card</a>
 	</div>
 
-	<!-- Back Part of the Quote Box -->
-	<div class = "quote-box block__main block__back">
+	<!-- Back Part of the question Box -->
+	<div class = "question-box block__main block__back">
 
-	<!-- Quote to be Displayed Here -->
-	<span class = "quote">
-		
-		<!-- Hyphen is Displayed -->
-		<i class="fas fa-2x"></i>
-
-		<!-- Quote Text -->
+	<!-- question to be Displayed Here -->
+	<span class = "question">
+		<!-- question Text -->
 		<span class = "text">
-		Quote To be Displayed Here
+		Questions To be Displayed Here
 		</span>
 
 	</span>
-		
-	<!-- Author to be Displayed Here -->
-	<div class = "author">
 	</div>
 		<!-- Button -->
-		<a class = "new-quote btn btn-default "
-			onclick="newQuote()">New Card</a>
+		<a class = "new-question btn btn-default "
+			onclick="newQuestion()">New Card</a>
 	</div>
 </div>
 </div>
