Css styling change

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 	<div class="block text-center">
 
 	<!-- Front part of the question Box -->
-	<div class = "quote-box block__main block__front">
+	<div class = "question-box block__main block__front">
 
 	<!-- question to be Displayed Here -->
 	<span class = "questions">
