--- a/index.html
+++ b/index.html
@@ -63,6 +63,6 @@
 
 	<!-- Linking Your JavaScript File -->
 	<script src="script.js"></script>
+	<img id="logo" src="img/SFFG-logo.png" / style="width:200px;height:200px;bottom:10px">
 </body>
-
 </html>
