--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
-
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <head>
+	<link rel="icon" href="img/SFFG-logo.png" type="image/icon type">
+	<title>SFFG Hygge</title>
 	<!-- Loading The Bootstrap Library -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
 		integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous" />
@@ -63,6 +65,6 @@
 
 	<!-- Linking Your JavaScript File -->
 	<script src="script.js"></script>
-	<img id="logo" src="img/SFFG-logo.png" />
+	<!-- <img id="logo" src="img/SFFG-logo.png" /> -->
 </body>
 </html>
