--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
 </head>
 
 <body id="body">
+<img id="logo" src="img/SFFG-logo.png" />
+
 
 	<!-- question Box -->
 	<div class="block text-center">
